[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Powerup.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/grass.png" type="Texture" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/Coin.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Hit.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/Powerup.wav" type="AudioStream" id=10]
[ext_resource path="res://Cactus.tscn" type="PackedScene" id=11]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Coin = ExtResource( 2 )
playtime = 30
Powerup = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 600.0
margin_bottom = 751.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="CoinContainer" type="Node2D" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Cactus" parent="." instance=ExtResource( 11 )]
position = Vector2( 339.115, 310.204 )
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
